Quorum3/Library/Tests/TypeChecker/Pass/ImpAssignIntegerIntObjWrapped.quorum
class Main
    action Main
        Integer int
        int:SetValue(5)
        integer i = int
    end
end