Quorum3/Library/Tests/TypeChecker/Fail/ExpAssignBooleanIntObj.quorum
class main
    action Main
        Integer i
        boolean bool = false
        i:SetValue(5)
        bool = cast(boolean, i)
    end
end